--- a/ALE-RestartWatchdog.csproj
+++ b/ALE-RestartWatchdog.csproj
@@ -35,6 +35,8 @@
     <Reference Include="NLog">
       <HintPath>..\..\Server\torch-server\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="Sandbox.Common">
       <HintPath>..\..\Server\torch-server\DedicatedServer64\Sandbox.Common.dll</HintPath>
     </Reference>
@@ -58,6 +60,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -84,12 +87,22 @@
     <Reference Include="VRage.Math">
       <HintPath>..\..\Server\torch-server\DedicatedServer64\VRage.Math.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control.xaml.cs">
+      <DependentUpon>Control.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RestartConfig.cs" />
     <Compile Include="RestartPlugin.cs" />
     <Compile Include="RestartManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Control.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
