--- a/ALE-RestartWatchdog.csproj
+++ b/ALE-RestartWatchdog.csproj
@@ -142,16 +142,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Control.xaml.cs">
+    <Compile Include="ALE-RestartWatchdog\Control.xaml.cs">
       <DependentUpon>Control.xaml</DependentUpon>
     </Compile>
-    <Compile Include="RestartConfig.cs" />
-    <Compile Include="RestartPlugin.cs" />
-    <Compile Include="RestartManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ALE-RestartWatchdog\RestartConfig.cs" />
+    <Compile Include="ALE-RestartWatchdog\RestartPlugin.cs" />
+    <Compile Include="ALE-RestartWatchdog\RestartManager.cs" />
+    <Compile Include="ALE-RestartWatchdog\Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Control.xaml">
+    <Page Include="ALE-RestartWatchdog\Control.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
